Finish Lab 4 - TCP and UDP sockets.